# urdwell-mcp

./: .gitignore  PARQUET_STORAGE.md  README.md  SECURITY.md  context_memory.py  embeddings.py  install.ps1  install.sh  main.py  models.py  pipeline.py  probe_consolidation.py  pyproject.toml  storage.py  test_client.py  test_compatibility.py  test_embeddings.py  test_integrations.py  test_llm_client.py  test_longmemeval.py  test_longmemeval_e2e.py  test_mcp_e2e.py  test_pipeline.py  test_ranking.py  test_storage.py
.github/workflows/: release.yml
benchmarks/longmemeval/: Modelfile.gemma4-8b-128k  README.md  RESULTS.md  compare_runs.py  download_dataset.py  llm_client.py  run_end_to_end.py  run_local.ps1  run_retrieval.py  run_retrieval_hybrid.py
contextmemory/: __init__.py  cli.py  embeddings.py  integrations.py  pipeline.py  ranking.py  server.py  storage.py
urdwell/: __init__.py  cli.py  embeddings.py  integrations.py  models.py  pipeline.py  ranking.py  server.py  storage.py
