[project]
name = "contextmemory"
version = "0.2.1"
description = "Long-term memory MCP server with bi-temporal invalidation and semantic search"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Mounir1200" }]
keywords = ["mcp", "memory", "llm", "embeddings", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.27.2",
    "fastembed>=0.8.0",
]

[project.optional-dependencies]
# Heavy PyTorch backend; only needed for CONTEXT_MEMORY_EMBEDDING_BACKEND=transformer.
transformer = ["sentence-transformers>=3.0"]

[project.urls]
Homepage = "https://github.com/Mounir1200/contextmemory-mcp"
Repository = "https://github.com/Mounir1200/contextmemory-mcp"
Issues = "https://github.com/Mounir1200/contextmemory-mcp/issues"

[project.scripts]
contextmemory = "contextmemory.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contextmemory"]
