[project]
name = "urdwell"
version = "0.3.1"
description = "Local-first memory MCP server with temporal history and semantic search"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Mounir1200" }]
keywords = ["mcp", "memory", "llm", "temporal", "embeddings", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.27.2",
    "fastembed>=0.8.0",
    "pyarrow>=18.0.0",
]

[project.urls]
Homepage = "https://github.com/Mounir1200/urdwell-mcp"
Repository = "https://github.com/Mounir1200/urdwell-mcp"
Issues = "https://github.com/Mounir1200/urdwell-mcp/issues"

[project.scripts]
urdwell = "urdwell.cli:main"
# Compatibility alias for installations and agent configs created before 0.3.
contextmemory = "urdwell.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["urdwell", "contextmemory"]
